--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation("androidx.compose.material3:material3:1.0.0-alpha07")
+    implementation 'androidx.ui:ui-layout:0.1.0-dev04'
+    implementation 'androidx.ui:ui-material:0.1.0-dev04'
 }
